# window.art

chrome-extension/: .gitignore  Makefile  background.js  manifest.json  newtab.html  newtab.js
chrome-extension/css/: index.css
chrome-extension/src/: manifest.json  newtab.html
chrome-extension/src/_locales/en/: messages.json
chrome-extension/src/_locales/ja/: messages.json
chrome-extension/src/css/: index.css
chrome-extension/src/js/: index.js
server/: Cargo.toml  Dockerfile  Procfile  RustConfig  saku.md
server/artell/: Cargo.toml
server/artell-app/: Cargo.toml
server/artell-app/src/: lib.rs
server/artell-app/src/command/: add_art.rs  add_artist.rs  admin_add_artist.rs  admin_add_schedule.rs  mod.rs
server/artell-app/src/query/: get_current_art.rs
server/artell-cli/: Cargo.toml
server/artell-cli/src/: add_art.rs  add_artist.rs  add_schedule.rs  get_schedules.rs  main.rs
server/artell-domain/: Cargo.toml
server/artell-domain/src/: lib.rs
server/artell-domain/src/access_token/: encoder.rs  mod.rs  model.rs
server/artell-domain/src/admin/: model.rs
server/artell-domain/src/art/: model.rs  repository.rs
server/artell-domain/src/artist/: model.rs  repository.rs
server/artell-domain/src/commons/: access_token.rs  cred.rs
server/artell-domain/src/image/: model.rs  repository.rs
server/artell-domain/src/scheduler/: model.rs  repository.rs
server/artell-infra/: Cargo.toml  diesel-util.sh  diesel.toml
server/artell-infra/examples/: put-s3.rs
server/artell-infra/migrations/2020-05-01-093659_init/: down.sql  up.sql
server/artell-infra/migrations/2020-05-15-072606_add-materials-and-size/: down.sql  up.sql
server/artell-infra/src/: lib.rs
server/artell-infra/src/fs/: image.rs  mod.rs
server/artell-infra/src/pg/: art.rs  artist.rs  mod.rs  postgres.rs  scheduler.rs  schema.rs
server/artell-infra/src/s3/: image.rs
server/artell-usecase/: Cargo.toml
server/artell-usecase/src/: lib.rs
server/artell-usecase/src/admin/: add_art.rs  get_schedules.rs
server/artell-usecase/src/command/: admin_add_art.rs  mod.rs  system_update_scheduler.rs
server/artell-usecase/src/query/: get_current_art.rs
server/artell-usecase/src/system/: mod.rs
server/artell-usecase/src/user/: get_current_art.rs
server/artell/src/: config.rs  main.rs  res.rs  server.rs
server/artell/src/routes/api/: mod.rs
server/artell/src/routes/api/admin/: add_art.rs  add_artist.rs  add_schedule.rs  get_schedules.rs  mod.rs
server/artell/src/routes/api/user/: get_current_art.rs  mod.rs
