[package]
name = "artell-cli"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json", "rustls-tls"], default-features=false }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
