[package]
name = "artell-infra"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artell-domain = { path = "../artell-domain" }

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuid", "uuidv07"] }
futures = "0.3"
lazycell = "1.2"
log = "0.4"
rusoto_core = "0.43"
rusoto_s3 = "0.43"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "blocking"] }
uuid = "0.8"

[dev-dependencies]
bytes = "0.5"
