[package]
name = "artell-usecase"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artell-domain = { path = "../artell-domain" }

anyhow = "1.0"
bytes = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
