[package]
name = "artell"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artell-usecase = { path = "../artell-usecase" }
artell-infra = { path = "../artell-infra" }

anyhow = "1.0"
base64 = "0.12"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "0.2"
log = "0.4"
openssl = "*"
openssl-probe = "*"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.2"
